# geometry-shader-explosion

./: .gitignore  README.md  config.toml  imgui.ini  pyproject.toml  test.py
resources/models/: bomb.mtl  cat.mtl  indicator.mtl
resources/shaders/: fragment-shader.frag  geometry-shader.geom  vertex-shader.vert
src/: camera.py  config.py  loader.py  main.py  shaders.py  util.py  window.py
